<resources>
    <string name="app_name" translatable="false">Btnv</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_state_of_windows">Get State of Windows</string>
    <string name="menu_amount_of_windows_according_to_state">Amount of Windows according to state</string>
    <string name="menu_get_winners">Get Winners</string>
    <string name="menu_reset_windows_to_open_all">Reset Windows to Open All</string>
    <string name="menu_allow_new_sty_four_visitors">Allow New 64 Visitors</string>
    <string name="the_windows_castle_game">The Windows Castle Game</string>
    <string name="results">Results</string>
    <string name="dev_test">Dev Test</string>
    <string name="about">About</string>
    <string name="states_of_windows">States of Windows</string>
    <string name="type_a">Type A</string>
    <string name="type_i">Type I</string>
    <string name="type_d">Type D</string>
    <string name="type_c">Type C</string>
    <string name="type_a">Type A</string>
    <string name="type_c">Type C</string>
    <string name="type_i">Type I</string>
    <string name="type_d">Type D</string>
</resources>