<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bitnovo.seleccion.herbert.btnv.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bitnovo.seleccion.herbert.btnv.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bitnovo.seleccion.herbert.btnv.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/state_Of_Windows"
        android:name="com.bitnovo.seleccion.herbert.btnv.State_Of_Windows"
        android:label="state__of__windows_fragment"
        tools:layout="@layout/state__of__windows_fragment" />
    <fragment
        android:id="@+id/amount_Of_Windows_According_to_State"
        android:name="com.bitnovo.seleccion.herbert.btnv.Amount_Of_Windows_According_to_State"
        android:label="amount__of__windows__according_to__state_fragment"
        tools:layout="@layout/amount__of__windows__according_to__state_fragment" />
    <fragment
        android:id="@+id/get_Winners"
        android:name="com.bitnovo.seleccion.herbert.btnv.Get_Winners"
        android:label="get__winners_fragment"
        tools:layout="@layout/get__winners_fragment" />
    <fragment
        android:id="@+id/reset_Windows_to_Open_All"
        android:name="com.bitnovo.seleccion.herbert.btnv.Reset_Windows_to_Open_All"
        android:label="reset__windows_to__open__all_fragment"
        tools:layout="@layout/reset__windows_to__open__all_fragment" />
    <fragment
        android:id="@+id/allow_New_Sty_Four_Visitors"
        android:name="com.bitnovo.seleccion.herbert.btnv.Allow_New_Sty_Four_Visitors"
        android:label="allow__new__sty__four__visitors_fragment"
        tools:layout="@layout/allow__new__sty__four__visitors_fragment" />
</navigation>